[metadata]
name = spihole
description = Operate a raspberrypi powered peephole camera
long_description = file: README.rst, CHANGELOG.rst, LICENSE
author = zoloft
author_email = zoloft@orcod.io
keywords = raspberry,waveshare,camera,spyhole,peephole,automation
python_requires = >=3.7
url = https://github.com/zoloft/python-spihole
project_urls=
    Documentation = https://python-spihole.readthedocs.io/
    Changelog = https://python-spihole.readthedocs.io/en/latest/changelog.html
    Issue Tracker = https://github.com/zoloft/python-spihole/issues
license = MIT
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: Unix
    Operating System :: POSIX
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Utilities

[options]
zip_safe = False
include_package_data = True
package_dir=
    =src
packages = find:
install_requires =
    click
    fake_rpi; platform_system!='Linux' or (platform_machine != 'armv6l')
    numpy
    picamera; platform_system=='Linux' and (platform_machine == 'armv6l')
    spidev; platform_system=='Linux' and (platform_machine == 'armv6l')
    Pillow
    RPi.GPIO; platform_system=='Linux' and (platform_machine == 'armv6l')

entry_points=
    [console_scripts]
    spihole = spihole.cli:main

[options.package_data]
* = *.txt, *.rst

[options.packages.find]
where = src

[flake8]
max-line-length = 140
exclude = .tox,.eggs,ci/templates,build,dist

[tool:pytest]
# If a pytest section is found in one of the possible config files
# (pytest.ini, tox.ini or setup.cfg), then pytest will not look for any others,
# so if you add a pytest config section elsewhere,
# you will need to delete this section from setup.cfg.
norecursedirs =
    migrations

python_files =
    test_*.py
    *_test.py
    tests.py
addopts =
    -ra
    --strict
    --doctest-modules
    --doctest-glob=\*.rst
    --tb=short
testpaths =
    tests

[tool:isort]
force_single_line = True
line_length = 120
known_first_party = spihole
default_section = THIRDPARTY
forced_separate = test_spihole
skip = .tox,.eggs,ci/templates,build,dist
